# rigpl-erpnext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
plugins/: test_client_scripts.js  test_custom_print_format.html
rigpl_erpnext/: hooks.py  modules.txt  patches.txt  utils.py
rigpl_erpnext/config/: accounts.py  buying.py  crm.py  desktop.py  hr.py  manufacturing.py  selling.py  settings.py  stock.py
rigpl_erpnext/custom_method/: custom_method.py
rigpl_erpnext/fixtures/: client_script.json  custom_field.csv  custom_field.json  custom_script.json
rigpl_erpnext/patches/: 20151013_delete_obsolete_items.py  20160106_update_invoice_trial_tracking.py  20160224_update_rol_table.py  20160325_xss_removal.py  20160505_update_overtime_attendance.py  20160730_copy_contribution_ss_ss.py  20160819_create_valuation_rate_carbide_rm.py  20161016_insert_sales_person_in_customer.py  20170103_salary_slip_fields.py  20170415_emp_loan_changes.py  20170415_expense_claim_status_update.py  20170518_emp_adv_direct_post.py  20170519_salary_slip_direct_post.py  20170616_salary_slip_direct_post_all.py  20170630_link_items_with_customs.py  20170706_roster_move_dates_to_child.py  20170726_create_tracking_details_old_invoice.py  20170914_create_brc_tracking.py  20171116_update_expiry_date_quotation.py  20180516_manually_convert_incl_to_excl_gst18.py  20180710_restore_deleted_sales_team_data.py  20181119_update_shift_in_attendance.py  20181222_update_gst_hsn_code_q_so_dn.py  20181222_update_plist.py  (+11 more)
(+735 files in other folders)
